# Robot_View

./: .gitignore  CMakeLists.txt  CODEX_HANDOFF.md  README.md  bringup.launch.py  package.xml  upload_github.sh  运行要求.md
config/: amcl.yaml  auto_mapping_route.yaml  cartographer.lua  nav.rviz  nav2.yaml  slam.rviz
description/: robot.xacro
docs/: 验收清单.md
launch/: nav.launch.py  rtabmap.launch.py  slam.launch.py  spawn.launch.py
scripts/: apriltag_detect.py  auto_mapping_patrol.py  forklift_controller.py  setup_autodl.sh  spawn_robot.py  waypoint_nav.py
tests/: static_checks.py
worlds/: warehouse.world
